@@ -5,11 +5,15 @@ Broker:
 - Fix detection of incoming v3.1/v3.1.1 bridges. Closes #1263.
 - Fix default max_topic_alias listener config not being copied to the in-use
   listener when compiled without TLS support.
-- Fix random number generation if compiling using WITH_TLS=no and on Linux
+- Fix random number generation if compiling using `WITH_TLS=no` and on Linux
   with glibc >= 2.25. Without this fix, no random numbers would be generated
   for e.g. on broker client id generation, and so clients connecting expecting
   this feature would be unable to connect.
-- Fix compilation problem related to getrandom() on non-glibc systems.
+- Fix compilation problem related to `getrandom()` on non-glibc systems.
+- Fix Will message for a persistent client incorrectly being sent when the
+  client reconnects after a clean disconnect. Closes #1273.
+- Fix Will message for a persistent client not being sent on disconnect.
+  Closes #1273.
 
 Clients:
 - Fix -L url parsing when `/topic` part is missing.
@@ -17,6 +21,7 @@ Clients:
   Closes #1284.
 - Fix mosquitto_pub exiting with error code 0 when an error occurred.
   Closes #1285.
+- Fix mosquitto_pub not using the `-c` option. Closes #1273.
 
 
 1.6.2 - 20190430
